--- a/sass/bootstrap.scss
+++ b/sass/bootstrap.scss
@@ -39,7 +39,7 @@
 @import '../bower_components/sass-bootstrap/lib/close';
 
 // // Components w/ JavaScript
-// @import '../bower_components/sass-bootstrap/lib/modals';
+@import '../bower_components/sass-bootstrap/lib/modals';
 // @import '../bower_components/sass-bootstrap/lib/tooltip';
 // @import '../bower_components/sass-bootstrap/lib/popovers';
 // @import '../bower_components/sass-bootstrap/lib/carousel';
