--- a/sass/racktemp.scss
+++ b/sass/racktemp.scss
@@ -6,6 +6,14 @@
   padding: 1em 0;
 }
 
-#wrapper {
+.wrapper {
   margin-top: 60px;
+}
+
+.navbar-toggle {
+  border-width: 0;
+}
+
+.pagination {
+  margin: 0;
 }
