--- a/sass/bootstrap.scss
+++ b/sass/bootstrap.scss
@@ -1,49 +1,54 @@
 // Core variables and mixins
-@import '../bower_components/sass-bootstrap/lib/variables';
-@import '../bower_components/sass-bootstrap/lib/mixins';
+@import 'bootstrap/variables';
+
+// set path for now
+// TODO use svg for hamburger
+$icon-font-path: 'style/';
+
+@import 'bootstrap/mixins';
 
 // Reset
-@import '../bower_components/sass-bootstrap/lib/normalize';
-@import '../bower_components/sass-bootstrap/lib/print';
+@import 'bootstrap/normalize';
+@import 'bootstrap/print';
 
 // Core CSS
-@import '../bower_components/sass-bootstrap/lib/scaffolding';
-@import '../bower_components/sass-bootstrap/lib/type';
-@import '../bower_components/sass-bootstrap/lib/code';
-@import '../bower_components/sass-bootstrap/lib/grid';
-@import '../bower_components/sass-bootstrap/lib/tables';
-@import '../bower_components/sass-bootstrap/lib/forms';
-@import '../bower_components/sass-bootstrap/lib/buttons';
+@import 'bootstrap/scaffolding';
+@import 'bootstrap/type';
+@import 'bootstrap/code';
+@import 'bootstrap/grid';
+@import 'bootstrap/tables';
+@import 'bootstrap/forms';
+@import 'bootstrap/buttons';
 
 // Components
-@import '../bower_components/sass-bootstrap/lib/component-animations';
-@import '../bower_components/sass-bootstrap/lib/glyphicons';
-// @import '../bower_components/sass-bootstrap/lib/dropdowns';
-// @import '../bower_components/sass-bootstrap/lib/button-groups';
-// @import '../bower_components/sass-bootstrap/lib/input-groups';
-@import '../bower_components/sass-bootstrap/lib/navs';
-@import '../bower_components/sass-bootstrap/lib/navbar';
-// @import '../bower_components/sass-bootstrap/lib/breadcrumbs';
-@import '../bower_components/sass-bootstrap/lib/pagination';
-@import '../bower_components/sass-bootstrap/lib/pager';
-@import '../bower_components/sass-bootstrap/lib/labels';
-@import '../bower_components/sass-bootstrap/lib/badges';
-@import '../bower_components/sass-bootstrap/lib/jumbotron';
-// @import '../bower_components/sass-bootstrap/lib/thumbnails';
-@import '../bower_components/sass-bootstrap/lib/alerts';
-// @import '../bower_components/sass-bootstrap/lib/progress-bars';
-// @import '../bower_components/sass-bootstrap/lib/media';
-// @import '../bower_components/sass-bootstrap/lib/list-group';
-// @import '../bower_components/sass-bootstrap/lib/panels';
-@import '../bower_components/sass-bootstrap/lib/wells';
-@import '../bower_components/sass-bootstrap/lib/close';
+@import 'bootstrap/component-animations';
+@import 'bootstrap/glyphicons';
+// @import 'bootstrap/dropdowns';
+// @import 'bootstrap/button-groups';
+// @import 'bootstrap/input-groups';
+@import 'bootstrap/navs';
+@import 'bootstrap/navbar';
+// @import 'bootstrap/breadcrumbs';
+@import 'bootstrap/pagination';
+@import 'bootstrap/pager';
+@import 'bootstrap/labels';
+@import 'bootstrap/badges';
+@import 'bootstrap/jumbotron';
+// @import 'bootstrap/thumbnails';
+@import 'bootstrap/alerts';
+// @import 'bootstrap/progress-bars';
+// @import 'bootstrap/media';
+// @import 'bootstrap/list-group';
+// @import 'bootstrap/panels';
+@import 'bootstrap/wells';
+@import 'bootstrap/close';
 
 // // Components w/ JavaScript
-@import '../bower_components/sass-bootstrap/lib/modals';
-// @import '../bower_components/sass-bootstrap/lib/tooltip';
-// @import '../bower_components/sass-bootstrap/lib/popovers';
-// @import '../bower_components/sass-bootstrap/lib/carousel';
+@import 'bootstrap/modals';
+// @import 'bootstrap/tooltip';
+// @import 'bootstrap/popovers';
+// @import 'bootstrap/carousel';
 
 // Utility classes
-@import '../bower_components/sass-bootstrap/lib/utilities';
-@import '../bower_components/sass-bootstrap/lib/responsive-utilities';
+@import 'bootstrap/utilities';
+@import 'bootstrap/responsive-utilities';
