using input groups

--- a/sass/bootstrap.scss
+++ b/sass/bootstrap.scss
@@ -25,7 +25,7 @@ $icon-font-path: 'style/';
 @import 'bootstrap/glyphicons';
 // @import 'bootstrap/dropdowns';
 // @import 'bootstrap/button-groups';
-// @import 'bootstrap/input-groups';
+@import 'bootstrap/input-groups';
 @import 'bootstrap/navs';
 @import 'bootstrap/navbar';
 // @import 'bootstrap/breadcrumbs';
