--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -10,6 +10,7 @@
         {% dump(renderSensors) %}
         {% for sensor in renderSensors  %}
           {% dump(sensor) %}
+          {% dump(sensor.currentTemp) %}
         <strong>{{ sensor.name }}</strong>: {{ sensor.currentTemp.temp }}C <span class="text-muted">{{ sensor.currentTemp.timespan }}</span><br>
         {% endfor %}
       </p>
