--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -11,6 +11,8 @@
         {% for sensor in renderSensors  %}
           {% dump(sensor) %}
           {% dump(sensor.currentTemp) %}
+          {% dump(sensor.currentTemp.temp) %}
+          {% dump(sensor.currentTemp.timespan) %}
         <strong>{{ sensor.name }}</strong>: {{ sensor.currentTemp.temp }}C <span class="text-muted">{{ sensor.currentTemp.timespan }}</span><br>
         {% endfor %}
       </p>
