--- a/app/Resources/views/rtbase.html.twig
+++ b/app/Resources/views/rtbase.html.twig
@@ -18,7 +18,9 @@
 {% block javascripts %}
   <script src="{{ asset('js/jquery.min.js') }}"></script>
   {#<script src="{{ asset('js/bootstrap.min.js') }}"></script>#}
+  {% if app.request.attributes.get('_route') == 'stats' %}
   <script src="{{ asset('js/d3.min.js') }}"></script>
   <script src="{{ asset('js/c3.min.js') }}"></script>
+  {% endif %}
   <script src="{{ asset('js/racktemp.min.js') }}"></script>
 {% endblock %}
