--- a/app/Resources/views/default/detailed.html.twig
+++ b/app/Resources/views/default/detailed.html.twig
@@ -9,7 +9,7 @@
   </ul>
 
   <div class="tab-content">
-    <div class="tab-pane">
+    <div class="tab-pane" style="display: block !important;">
       <p>Listing {{ listStart }} - {{ listEnd }} of {{ total }} from {{ sensor.name }}</p>
 
       {{ pagination|raw }}
