--- a/sass/racktemp.scss
+++ b/sass/racktemp.scss
@@ -19,17 +19,25 @@
 }
 
 .signin {
-  background-color: #eee;
+//  background-color: #eee;
   padding-bottom: 40px;
   padding-top: 40px;
+  width: 100% !important;
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .form-signin {
-  margin: 0 auto;
-  max-width: 330px;
-  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 6px;
+  margin: auto;
+  max-width: 360px;
+  padding: 40px;
+//  margin-left: auto;
+//  margin-right: auto;
 
   .form-signin-heading {
+    margin-top: 0;
     margin-bottom: 10px;
   }
 
@@ -52,15 +60,13 @@
     }
   }
 
-  input[type="text"] {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-    margin-bottom: -1px;
+  button {
+    margin-top: 10px;
+    background-color: #303030;
+    border-color: #111;
   }
+}
 
-  input[type="password"] {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    margin-bottom: 10px;
-  }
+html {
+  height: 100%
 }
