--- a/app/Resources/views/rtbase.html.twig
+++ b/app/Resources/views/rtbase.html.twig
@@ -17,7 +17,7 @@
 
 {% block javascripts %}
   <script src="{{ asset('js/jquery.min.js') }}"></script>
-  {#<script src="{{ asset('js/bootstrap.min.js') }}"></script>#}
+  <script src="{{ asset('js/bootstrap.min.js') }}"></script>
   {% if app.request.attributes.get('_route') == 'stats' or app.request.attributes.get('_route') == 'homepage' %}
   <script src="{{ asset('js/d3.min.js') }}"></script>
   <script src="{{ asset('js/c3.min.js') }}"></script>
