--- a/app/Resources/views/default/detailed.html.twig
+++ b/app/Resources/views/default/detailed.html.twig
@@ -4,7 +4,7 @@
 
   <ul class="nav nav-tabs">
   {% for s in sensors %}
-    <li {{ s.name in app.request.attributes.get('_route') ? 'class="active"' : '' }}><a href="{{ url('details', {'sensorname': s.name}) }}" data-toggle="tab">{{ s.name }}</a></li>
+    <li {{ s.name == current ? 'class="active"' : '' }}><a href="{{ url('details', {'sensorname': s.name}) }}" data-toggle="tab">{{ s.name }}</a></li>
   {% endfor %}
   </ul>
 
