--- a/app/Resources/views/default/login.html.twig
+++ b/app/Resources/views/default/login.html.twig
@@ -4,8 +4,8 @@
   <link rel="stylesheet" href="{{ asset('css/racktemp.min.css') }}">
   <style type="text/css">
     body {
-      background-image: url({{ asset('img/signinbg.jpg') }});
-      background-size: cover;
+      {#background-image: url({{ asset('img/signinbg.jpg') }});#}
+      {#background-size: cover;#}
     }
 
     @media (min-width: 1200px) {
@@ -21,13 +21,10 @@
 
 {% block body %}
 
-  <div class="container signin">
+  <div class="container">
   {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
   {% endif %}
-    <div class="row">
-      <div class="col-lg-12">
-
 
     <form class="form-signin" action="{{ path('login_check') }}" method="post">
       <h2 class="form-signin-heading">Sign in</h2>
@@ -45,8 +42,7 @@
       #}
       <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
     </form>
-      </div>
-    </div>
+
   </div>
 
 {% endblock %}
