--- a/sass/racktemp.scss
+++ b/sass/racktemp.scss
@@ -49,19 +49,12 @@
     margin-bottom: 10px;
   }
 
-  .checkbox {
-    font-weight: normal;
-    margin-bottom: 10px;
-  }
-
   .form-control {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+//    box-sizing: border-box;
     font-size: 16px;
     height: auto;
     padding: 10px;
-    position: relative;
+//    position: relative;
 
     &:focus {
       z-index: 2;
@@ -81,6 +74,6 @@
   }
 }
 
-html {
-  height: 100%
-}
+//html {
+//  height: 100%
+//}
