--- a/app/Resources/views/default/detailed.html.twig
+++ b/app/Resources/views/default/detailed.html.twig
@@ -1,5 +1,7 @@
 {% extends '::rtbase.html.twig' %}
 
+{% block title %} - Details{% endblock %}
+
 {% block container %}
 
   <ul class="nav nav-tabs">
