--- a/app/Resources/views/default/login.html.twig
+++ b/app/Resources/views/default/login.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %} - Login{% endblock %}
+
 {% block stylesheets %}
   <link rel="stylesheet" href="{{ asset('css/racktemp.min.css') }}">
   <style type="text/css">
@@ -11,7 +13,9 @@
     body {
       background-image: url({{ asset('img/signinbg.jpg') }});
       background-size: cover;
-      background-position: center
+      background-position: center;
+      padding-top: 40px;
+      padding-bottom: 40px;
     }
 
     @media (min-width: 1200px) {
