--- a/app/Resources/views/default/statistics.html.twig
+++ b/app/Resources/views/default/statistics.html.twig
@@ -1,5 +1,7 @@
 {% extends '::rtbase.html.twig' %}
 
+{% block title %} - Stats{% endblock %}
+
 {% block container %}
   <div class="row">
     <div class="col-md-6">
