--- a/app/Resources/views/settings/base.html.twig
+++ b/app/Resources/views/settings/base.html.twig
@@ -1,5 +1,7 @@
 {% extends '::rtbase.html.twig' %}
 
+{% block title %} - Settings{% endblock %}
+
 {% block container %}
   <ul class="nav nav-tabs">
     <li {{ app.request.attributes.get('_route') == 'settings_sensors'?'class="active"':'' }}><a href="{{ url('settings_sensors') }}" data-toggle="tab">Sensors</a></li>
