--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -7,9 +7,8 @@
       <h2>Latest Temperature</h2>
       <div class="pull-right" id="clock" style="font-size: 2em;"></div>
       <p>
-
         {% for sensor in renderSensors  %}
-        <strong>{{ sensor.name }}</strong>: {{ sensor.currentTemp.temp }}C <span class="text-muted">{{ sensor.currentTemp.timespan }}</span><br>
+          <strong>{{ sensor.name }}</strong>: {{ sensor.currentTemp.temp }}C <span class="text-muted">{{ sensor.currentTemp.timestamp }}</span><br>
         {% endfor %}
       </p>
 
@@ -24,12 +23,12 @@
         {% for s in stats %}
           <strong>{{ s.name }}</strong><br>
 
-          {% if not s.nostat %}
-            Min: {{ s.min.temp }}C <span class="text-muted">{{ s.min.timestamp }}</span><br>
-            Max: {{ s.max.temp }}C <span class="text-muted">{{ s.max.timestamp }}</span><br>
-            Avg: {{ s.avg.temp }}C<br>
-          {% else %}
+          {% if s.nostat is defined %}
             No fresh stats for today
+          {% else %}
+            Min: {{ s.min.temp }}C <span class="text-muted">{{ s.min.timestamp|date('H:i') }}</span><br>
+            Max: {{ s.max.temp }}C <span class="text-muted">{{ s.max.timestamp|date('H:i') }}</span><br>
+            Avg: {{ s.avg.temp }}C<br>
           {% endif %}
         {% endfor %}
       </p>
