--- a/app/Resources/views/default/login.html.twig
+++ b/app/Resources/views/default/login.html.twig
@@ -1,5 +1,40 @@
 {% extends 'base.html.twig' %}
 
+{% block title %} - Login{% endblock %}
+
+{% block stylesheets %}
+  <link rel="stylesheet" href="{{ asset('css/racktemp.min.css') }}">
+  <style type="text/css">
+    html {
+      height: 100%;
+      width: 100%;
+    }
+
+    body {
+      background-image: url({{ asset('img/signinbg.jpg') }});
+      background-size: cover;
+      background-position: center;
+      padding-top: 40px;
+      padding-bottom: 40px;
+    }
+
+    @media (min-width: 1200px) {
+      body {
+        height: 100%;
+        width: 100%;
+        display: table;
+        position: absolute;
+      }
+
+      .container {
+        width: 100%;
+        display: table-cell;
+        vertical-align: middle;
+      }
+    }
+  </style>
+{% endblock %}
+
 {% block body %}
 
   <div class="container">
@@ -10,19 +45,14 @@
     <form class="form-signin" action="{{ path('login_check') }}" method="post">
       <h2 class="form-signin-heading">Sign in</h2>
       <label for="username">Username:</label>
-      <input type="text" id="username" name="_username" value="{{ last_username }}" autofocus="" autocomplete="off" />
+      <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" autofocus="" autocomplete="off" />
 
       <label for="password">Password:</label>
-      <input type="password" id="password" name="_password" />
+      <input type="password" class="form-control" id="password" name="_password" />
 
-      {#
-          If you want to control the URL the user
-          is redirected to on success (more details below)
-
-      <input type="hidden" name="_target_path" value="{{ url('homepage') }}" />
-      #}
-      <button type="submit">login</button>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
     </form>
+
   </div>
 
 {% endblock %}
