--- a/sass/racktemp.scss
+++ b/sass/racktemp.scss
@@ -18,49 +18,50 @@
   margin: 0;
 }
 
-.signin {
-  background-color: #eee;
-  padding-bottom: 40px;
-  padding-top: 40px;
-}
-
 .form-signin {
-  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 6px;
   max-width: 330px;
   padding: 15px;
+  margin: 0 auto;
 
   .form-signin-heading {
     margin-bottom: 10px;
   }
 
   .checkbox {
-    font-weight: normal;
     margin-bottom: 10px;
+    font-weight: normal;
   }
 
   .form-control {
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    font-size: 16px;
-    height: auto;
-    padding: 10px;
     position: relative;
+    height: auto;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 16px;
 
     &:focus {
       z-index: 2;
     }
   }
 
-  input[type="text"] {
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
-    margin-bottom: -1px;
+  input {
+
+    &[type="text"] {
+      margin-bottom: 5px;
+    }
+
+    &[type="password"] {
+      margin-bottom: 15px;
+    }
   }
 
-  input[type="password"] {
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-    margin-bottom: 10px;
+  button {
+    margin-top: 10px;
+    background-color: #303030;
+    border-color: #111;
   }
 }
