--- a/app/Resources/views/default/login.html.twig
+++ b/app/Resources/views/default/login.html.twig
@@ -42,12 +42,13 @@
 {% block body %}
 
   <div class="container">
-  {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-  {% endif %}
+
 
     <form class="form-signin" action="{{ path('login_check') }}" method="post">
       <h2 class="form-signin-heading">RackTemp Sign in</h2>
+      {% if error %}
+        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+      {% endif %}
       <label for="username">Username:</label>
       <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" autofocus="" autocomplete="off" />
 
