--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -1,23 +1,18 @@
-<hr>
-{# TODO extract actual app version from somewhere #}
+{% set copyname = '2013 - 2015 Snilus' %}
+
 {% if app.request.attributes.get('_route') == 'login' %}
-<footer><div style="margin-top: 10px; color: #666;">RackTemp v echo file_get_contents('../VERSION') &copy; 2013-2014 Snilus</div></footer>
+<footer><div style="margin-top: 10px; color: #000000;">RackTemp &copy; {{ copyname }}</div></footer>
 {% else %}
+  <hr>
 <footer>
   <div class="row">
     <div class="col-md-4">
-      <p>RackTemp v<?php echo file_get_contents('../VERSION'); ?> <a href="https://github.com/victorhaggqvist/racktemp" class="text-muted">Source</a></p>
+      <p>RackTemp | <a href="https://github.com/victorhaggqvist/racktemp" class="text-muted">Source</a></p>
     </div>
-    <div class="col-md-4"><p>Copyright &copy; 2013-2015 Snilus</p></div>
+    <div class="col-md-4"><p>Copyright &copy; {{ copyname }}</p></div>
     <div class="col-md-4"><p>Licensed under GPLv3</p></div>
   </div>
 </footer>
 {% endif %}
 
-{#<?php#}
-{#if($s->getValue('use-cdn') == 1)#}
-{#echo '<script src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>';#}
-
-{#if ($s->getValue('send-stats') == 1)#}
-{#require_once 'lib/analytics.php';#}
 
