--- a/app/Resources/views/login/index.html.twig
+++ b/app/Resources/views/login/index.html.twig
@@ -56,6 +56,8 @@
       <input type="password" class="form-control" id="password" name="_password" />
 
       <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+
+      {{ include('::footer.html.twig') }}
     </form>
 
   </div>
