--- a/app/Resources/views/login/index.html.twig
+++ b/app/Resources/views/login/index.html.twig
@@ -11,11 +11,9 @@
     }
 
     body {
-      background-image: url({{ asset('img/signinbg.jpg') }});
-      background-size: cover;
-      background-position: center;
-      padding-top: 40px;
-      padding-bottom: 40px;
+      background-image: url({{ asset('img/footer_lodyas.png') }});
+      background-repeat: repeat;
+
     }
 
     @media (min-width: 1200px) {
@@ -45,14 +43,14 @@
 
 
     <form class="form-signin" action="{{ path('login_check') }}" method="post">
-      <h2 class="form-signin-heading">RackTemp Sign in</h2>
+      <h2 class="form-signin-heading">RackTemp</h2>
       {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
       {% endif %}
-      <label for="username">Username:</label>
+      <label for="username">Username</label>
       <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" autofocus="" autocomplete="off" />
 
-      <label for="password">Password:</label>
+      <label for="password">Password</label>
       <input type="password" class="form-control" id="password" name="_password" />
 
       <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
