--- a/sass/racktemp.scss
+++ b/sass/racktemp.scss
@@ -1,3 +1,5 @@
+@import "bootstrap";
+
 .form-help {
   margin-top: .4em;
 }
@@ -19,7 +21,7 @@
 }
 
 .form-signin {
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: #F5F5F5;
   border-radius: 6px;
   max-width: 330px;
   padding: 15px;
