fix missing c3 css

--- a/app/Resources/views/rtbase.html.twig
+++ b/app/Resources/views/rtbase.html.twig
@@ -2,6 +2,7 @@
 
 {% block stylesheets %}
   <link rel="stylesheet" href="{{ asset('css/racktemp.min.css') }}">
+  <link rel="stylesheet" href="{{ asset('css/c3.css') }}">
 {% endblock %}
 
 {% block body %}
