--- a/app/Resources/views/settings/general.html.twig
+++ b/app/Resources/views/settings/general.html.twig
@@ -3,19 +3,19 @@
 {% block tab %}
 
   <form class="form-horizontal" role="form" action="{{ url('settings_general') }}" method="post">
-    <div class="checkbox">
-      <label>
-        <input type="checkbox" name="auth" {{ setting('auth')=='1'?'checked':'' }}> Require Authentication
-      </label>
-      <span class="help-block">Require users to login in order to access racktemp</span>
-    </div>
+    {#<div class="checkbox">#}
+      {#<label>#}
+        {#<input type="checkbox" name="auth" {{ setting('auth')=='1'?'checked':'' }}> Require Authentication#}
+      {#</label>#}
+      {#<span class="help-block">Require users to login in order to access racktemp</span>#}
+    {#</div>#}
 
-    <!--   <div class="checkbox">
-        <label>
-          <input type="checkbox" name="use-cdn" <?php echo ($set['use-cdn']==1)?'checked':'';?>> Use CDN for Bootstrap
-        </label>
-        <span class="help-block">Load Bootstrap resources from CDN rather than from local machine. A internet connection are obviously required to do this</span>
-      </div> -->
+    {#<div class="checkbox">#}
+        {#<label>#}
+          {#<input type="checkbox" name="use-cdn" <?php echo ($set['use-cdn']==1)?'checked':'';?>> Use CDN for Bootstrap#}
+        {#</label>#}
+        {#<span class="help-block">Load Bootstrap resources from CDN rather than from local machine. A internet connection are obviously required to do this</span>#}
+      {#</div>#}
 
     <div class="checkbox">
       <label>
@@ -24,11 +24,11 @@
       <span class="help-block">Enable the ability to manual add sensors</span>
     </div>
 
-    <div class="checkbox">
-      <label>
-        <input type="checkbox" name="send-stats" {{ setting('send-stats')=='1'?'checked':'' }}> Send stats
-      </label>
-    </div>
+    {#<div class="checkbox">#}
+      {#<label>#}
+        {#<input type="checkbox" name="send-stats" {{ setting('send-stats')=='1'?'checked':'' }}> Send stats#}
+      {#</label>#}
+    {#</div>#}
 
     <input type="submit" class="btn btn-primary" name="submit" value="Save">
   </form>
